update authors' names

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 Chalmers University of Technology
                                 <br />
                                 Supervisor:
-                                <a href="https://www.chalmers.se/en/persons/job/">Björn Johansson</a>,
+                                <a href="https://www.chalmers.se/en/persons/job/">Bj\"orn Johansson</a>,
                                 <a href="https://www.chalmers.se/en/persons/skoand/">Anders Skoogh</a> -->
                             </div>
                         </div>
@@ -309,17 +309,6 @@
                         <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a>
                         <!-- <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> |
                         <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a> -->
-
-                        <!-- <div class="row vspace-top-news">
-                            <div class="col">
-                                <div class="paper-title">A Systematic Literature Review of Computer Vision Applications in Robotized Wire Harness Assembly</div>
-                                <div class="paper-desc">Preprint</div>
-                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Björn Johansson, Dan Lämkull, Fredrik Ore, Mélanie Despeisse, Luca Fumagalli, Johan Stahre</div>
-                                <div>
-                                    <a href="https://arxiv.org/abs/2309.13744">Preprint</a>
-                                </div>
-                            </div>
-                        </div> -->
                         
                         <div class="row vspace-top-news">
                             <div class="col">
@@ -331,7 +320,7 @@
                             <div class="col">
                                 <div class="paper-title">A Systematic Literature Review of Computer Vision Applications in Robotized Wire Harness Assembly</div>
                                 <div class="paper-desc">Advanced Engineering Informatics (2024)</div>
-                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Mélanie Despeisse, Luca Fumagalli, Johan Stahre, Björn Johansson</div>
+                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan L\"amkull, Fredrik Ore, M\'elanie Despeisse, Luca Fumagalli, Johan Stahre, Bj\"orn Johansson</div>
                                 <div>
                                     <a href="https://doi.org/10.1016/j.aei.2024.102596">Paper</a>
                                 </div>
@@ -359,7 +348,7 @@
                             <div class="col">
                                 <div class="paper-title">Overview of Computer Vision Techniques in Robotized Wire Harness Assembly: Current State and Future Opportunities</div>
                                 <div class="paper-desc">2023 CIRP International Conference on Manufacturing Systems (CIRP CMS)</div>
-                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Björn Johansson, Johan Stahre</div>
+                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan L\"amkull, Fredrik Ore, Bj\"orn Johansson, Johan Stahre</div>
                                 <div>
                                     <a href="https://doi.org/10.1016/j.procir.2023.09.127">Paper</a> |
                                     <a href="docs/publication/presentation/2023_CIRP_CMS.pdf">Slides</a>
@@ -371,7 +360,7 @@
                             <div class="col">
                                 <div class="paper-title">Review of Current Status and Future Directions for Collaborative and Semi-Automated Automotive Wire Harnesses Assembly</div>
                                 <div class="paper-desc">2023 CIRP International Conference on Manufacturing Systems (CIRP CMS)</div>
-                                <div class="paper-authors">Omkar Salunkhe, Walter Quadrini, <b><u>Hao Wang</u></b>, Johan Stahre, David Romero, Luca Fumagalli, Dan Lämkull</div>
+                                <div class="paper-authors">Omkar Salunkhe, Walter Quadrini, <b><u>Hao Wang</u></b>, Johan Stahre, David Romero, Luca Fumagalli, Dan L\"amkull</div>
                                 <div>
                                     <a href="https://doi.org/10.1016/j.procir.2023.09.061">Paper</a>
                                 </div>
@@ -382,7 +371,7 @@
                             <div class="col">
                                 <div class="paper-title">Battery Production Systems: State of the Art and Future Developments</div>
                                 <div class="paper-desc">2023 IFIP International Conference on Advances in Production Management Systems (APMS)</div>
-                                <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
+                                <div class="paper-authors">M\'elanie Despeisse, Bj\"orn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. Gonz\'alez Ch\'avez, Anders Skoogh, Johan Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland \"Ortengren</div>
                                 <div>
                                     <a href="https://doi.org/10.1007/978-3-031-43688-8_36">Paper</a> |
                                     <a href="docs/publication/presentation/2023_IFIP_APMS.pdf">Slides</a>
@@ -394,7 +383,7 @@
                             <div class="col">
                                 <div class="paper-title">Deep Learning-Based Connector Detection for Robotized Assembly of Automotive Wire Harnesses</div>
                                 <div class="paper-desc">2023 IEEE International Conference on Automation Science and Engineering (CASE)</div>
-                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Björn Johansson</div>
+                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Bj\"orn Johansson</div>
                                 <div>
                                     <a href="https://doi.org/10.1109/CASE56687.2023.10260619">Paper</a> |
                                     <!-- <a href="https://arxiv.org/abs/2309.13746">Preprint</a> | -->
