update phd education

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="row vspace-top-news">
                             <!-- <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/chalmers_logo.png" width="50%" class="img-fluid" /></div> -->
                             <div class="col">
-                                <b>Ph.D. student</b>, Chalmers University of Technology, 2021 - Present
+                                <b>Ph.D. student in Product and Production Development</b>, Chalmers University of Technology, 2021 - Present
                                 <!-- <br />
                                 Chalmers University of Technology
                                 <br />
