update a journal paper

--- a/index.html
+++ b/index.html
@@ -318,6 +318,17 @@
 
                         <div class="row vspace-top-news">
                             <div class="col">
+                                <div class="paper-title">Challenges and Opportunities to Advance Manufacturing Research for Sustainable Battery Life Cycles</div>
+                                <div class="paper-desc">Frontiers in Manufacturing Technology (2024)</div>
+                                <div class="paper-authors">Björn Johansson, Mélanie Despeisse, Jon Bokrantz, Greta Braun, Huizhong Cao, Arpita Chari, Qi Fang, Clarissa A González Chávez, Anders Skoogh, Henrik Söderlund, <b><u>Hao Wang</u></b>, Kristina Wärmefjord, Lars Nyborg, Jinhua Sun, Roland Örtengren, Kelsea Schumacher, Laura Espinal, Katherine Morris, Jason Nunley, Yusuke Kishita, Yasushi Umeda, Federica Acerbi, Marta Pinzone, Hanna Persson, Sophie Charpentier, Kristina Edström, Daniel Brandell, Maheshwaran Gopalakrishnan, Hossein Rahnama, Lena Abrahamsson, Anna Öhrwall Rönnbäck, Johan Stahre</div>
+                                <!-- <div>
+                                    <a href="">Paper</a>
+                                </div> -->
+                            </div>
+                        </div>
+
+                        <div class="row vspace-top-news">
+                            <div class="col">
                                 <div class="paper-title">A Systematic Literature Review of Computer Vision Applications in Robotized Wire Harness Assembly</div>
                                 <div class="paper-desc">Advanced Engineering Informatics (2024)</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Mélanie Despeisse, Luca Fumagalli, Johan Stahre, Björn Johansson</div>
