update the format of paper-desc

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 font-weight: bold;
                 font-size: 20px;
             }
-            .paper-authors {
+            .paper-desc {
                 font-style: italic;
             }
 
