update the link to the battery journal paper

--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
                                 <div class="paper-title">Challenges and Opportunities to Advance Manufacturing Research for Sustainable Battery Life Cycles</div>
                                 <div class="paper-desc">Frontiers in Manufacturing Technology (2024)</div>
                                 <div class="paper-authors">Björn Johansson, Mélanie Despeisse, Jon Bokrantz, Greta Braun, Huizhong Cao, Arpita Chari, Qi Fang, Clarissa A González Chávez, Anders Skoogh, Henrik Söderlund, <b><u>Hao Wang</u></b>, Kristina Wärmefjord, Lars Nyborg, Jinhua Sun, Roland Örtengren, Kelsea Schumacher, Laura Espinal, Katherine Morris, Jason Nunley, Yusuke Kishita, Yasushi Umeda, Federica Acerbi, Marta Pinzone, Hanna Persson, Sophie Charpentier, Kristina Edström, Daniel Brandell, Maheshwaran Gopalakrishnan, Hossein Rahnama, Lena Abrahamsson, Anna Öhrwall Rönnbäck, Johan Stahre</div>
-                                <!-- <div>
-                                    <a href="">Paper</a>
-                                </div> -->
+                                <div>
+                                    <a href="https://doi.org/10.3389/fmtec.2024.1360076">Paper</a>
+                                </div>
                             </div>
                         </div>
 
