--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <div class="row vspace-top-news">
                             <!-- <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/uoe_logo.png" width="50%" class="img-fluid" /></div> -->
                             <div class="col">
-                                <b>MSc (with Distinction) in Informatics</b>, The University of Edinburgh, 2018 - 2019
+                                <b>M.Sc. in Informatics</b>, The University of Edinburgh, 2018 - 2019
                                 <!-- <br />
                                 The University of Edinburgh
                                 <br />
