update 2024 WMF report title

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
                     <div class="row vspace-top-news">
                         <div class="col">
-                            <div class="paper-title">2024 World Manufacturing Report: New Perspectives for the Future of Manufacturing: Outlook 2030</div>
+                            <div class="paper-title">2024 World Manufacturing Report - New Perspectives for the Future of Manufacturing: Outlook 2030</div>
                             <div class="paper-desc">World Manufacturing Foundation (2024)</div>
                             <div class="paper-authors"></div>
                             <div>
