Update the link to EWASS VINNOVA page

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 								<div class="paper-title">Empowering Human Workers for Assembly of Wire Harnesses (EWASS)</div>
 								<div class="paper-desc">VINNOVA, 2022-2025</div>
 								<div>
-									<a href="https://produktion2030.se/en/projekt/empowering-human-workers-assembly-wire-harnesses-ewass/">Webpage</a>
+									<a href="https://www.vinnova.se/en/p/ewass---empowering-human-workers-for-assembly-of-wire-harnesses/">Webpage</a>
 								</div>
 							</div>
 						</div>
