Update index.html with CV in Chinese

--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
 						<div id="header-text-email"><a href="malto: haowang@chalmers.se">haowang (at) chalmers (dot) se</a></div>
 						<div>
 							<br />
+							<a href="./docs/CV/CV_Hao_Wang.pdf">CV</a> |
+							<a href="./docs/CV/CV_HaoWang_zh.pdf">简历</a> |
 							<a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a> |
 							<!-- <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> | -->
 							<!-- <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a> | -->
-							<a href="https://orcid.org/0000-0003-3847-524X">ORCID</a> | <a href="https://github.com/HWANG7308">Github</a> | <a href="https://www.linkedin.com/in/haowang-chalmers">LinkedIn</a> |
-							<a href="./docs/CV/CV_Hao_Wang.pdf">CV</a>
+							<a href="https://orcid.org/0000-0003-3847-524X">ORCID</a> | <a href="https://github.com/HWANG7308">Github</a> | <a href="https://www.linkedin.com/in/haowang-chalmers">LinkedIn</a>
 							<!-- &emsp;<a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a> -->
 							<!-- &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> -->
 							<!-- &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i></a> -->
