Update URL to dih2 in index.html

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 								<div class="paper-title">A Pan-European Network of Robotics DIHs for Agile Production (DIH<sup>2</sup>)</div>
 								<div class="paper-desc">EU, 2019-2023</div>
 								<div>
-									<a href="https://www.dih-squared.eu/">Webpage</a>
+									<a href="https://cordis.europa.eu/project/id/824964">Webpage</a>
 								</div>
 							</div>
 						</div>
