Add new paper entry for APMS 2025 conference
Added a new paper entry with title, description, authors, and link.

--- a/index.html
+++ b/index.html
@@ -364,6 +364,19 @@
 
 						<div class="row vspace-top-news">
 							<div class="col">
+								<div class="paper-title">Developing Code Agents for Robot Programming: Technical and Managerial Perspectives</div>
+								<div class="paper-desc">2025 IFIP International Conference on Advances in Production Management Systems (APMS)</div>
+								<div class="paper-authors">
+									Omkar Salunkhe, Clarissa A. González Chávez, <b><u>Hao Wang</u></b>, Anna Syberfeldt, David Romero & Johan Stahre 
+								</div>
+								<div>
+									<a href="https://doi.org/10.1007/978-3-032-03515-8_10">Paper</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="row vspace-top-news">
+							<div class="col">
 								<div class="paper-title">Overview of Computer Vision Techniques in Robotized Wire Harness Assembly: Current State and Future Opportunities</div>
 								<div class="paper-desc">2023 CIRP International Conference on Manufacturing Systems (CIRP CMS)</div>
 								<div class="paper-authors">
