update department name

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<div id="header-text-status">
 							<a href="https://www.chalmers.se/en/persons/haowang/">Ph.D. student</a> <br />
 							<a href="https://www.chalmers.se/en/departments/ims/research/production-systems/">Division of Production Systems</a>,
-							<a href="https://www.chalmers.se/en/departments/ims/">Department of Industrial and Materials Science</a>
+							<a href="https://www.chalmers.se/en/departments/ims/">Department of Mechanical Engineering</a>
 							<br />
 							<a href="https://www.chalmers.se/en/">Chalmers University of Technology</a>
 							<br />
